--- a/shop/src/App.css
+++ b/shop/src/App.css
@@ -11,3 +11,10 @@
   background-position: center;
   margin-bottom: 30px;
 }
+.start{
+  opacity: 0;
+}
+.end{
+  opacity: 1;
+  transition: opacity 0.5s;
+}
